<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingHorizontal="@dimen/dp10"
    android:background="@drawable/pub_registration_dialog_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:gravity="right">

        <ImageView
            android:id="@+id/closeIconSubDialog"
            android:layout_width="@dimen/_20ssp"
            android:layout_height="@dimen/_20ssp"
            android:layout_marginTop="@dimen/padding20"
            android:src="@drawable/close" />
    </LinearLayout>

    <ImageView
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:src="@drawable/done_icon"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Congratulations"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/inter600"
        android:textColor="@color/black"
        android:textSize="@dimen/_17ssp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_have_successfully_connect_stripe_with_gr8niteout"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="@font/inter600"
        android:textColor="@color/pub_green"
        android:gravity="center"
        android:textSize="@dimen/_14ssp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="@font/anek400"
        android:textColor="@color/black"
        android:gravity="left"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold"
        android:text="@string/subscription_text"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/anek400"
        android:textColor="@color/black"
        android:gravity="left"
        android:textSize="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/subscription_text1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/anek400"
        android:textColor="@color/black"
        android:gravity="left"
        android:textSize="@dimen/_12sdp"
        android:text="@string/subscription_text2"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/anek400"
        android:textColor="@color/black"
        android:gravity="left"
        android:textSize="@dimen/_12sdp"
        android:text="@string/subscription_text3"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/anek400"
        android:textColor="@color/black"
        android:gravity="left"
        android:textSize="@dimen/_12sdp"
        android:text="@string/subscription_text4"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/anek400"
        android:textColor="@color/black"
        android:gravity="left"
        android:textSize="@dimen/_12sdp"
        android:text="@string/subscription_text5"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/anek400"
        android:textColor="@color/black"
        android:gravity="left"
        android:textSize="@dimen/_12sdp"
        android:text="@string/subscription_text6"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/anek400"
        android:textColor="@color/black"
        android:gravity="left"
        android:textSize="@dimen/_12sdp"
        android:text="@string/subscription_text7"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/anek400"
        android:textColor="@color/black"
        android:gravity="left"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/subscription_text8"/>


    <TextView
        android:id="@+id/GetAccountSubscription"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_38sdp"
        android:text="@string/get_account_subscription"
        android:layout_marginBottom="@dimen/_25sdp"
        android:background="@drawable/get_started_btn"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:gravity="center"
        android:textSize="@dimen/_14ssp"
        android:fontFamily="@font/anek600"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/_20sdp"
        />

</LinearLayout>